--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,11 @@ prediction/
 results/
 saved/
 wandb/
+configs/
 
 EDA.ipynb
 config*.yaml
 !config.yaml
 output*.log
-nohup*.log
+nohup*.out
+run_exps.sh
