--- a/config.yaml
+++ b/config.yaml
@@ -3,11 +3,12 @@ name: exp-name
 n_gpu: 1
 seed: 420
 use_wandb: true
+pred_path: ./prediction/submission_exp6.csv
 arch:
-  type: klue/bert-base
+  type: klue/roberta-large
 dataloader:
-  type: STSDataModule
-  batch_size: 16
+  type: REDataModule
+  batch_size: 32
   shuffle: true
   revision: 69b6010fe9681567b98f9d3d3c70487079183d4b
   num_workers: 0
@@ -16,8 +17,9 @@ dataloader:
     k: 5
 optimizer:
   type: AdamW
-  lr: 5.0e-05
+  lr: 2.e-5
   weight_decay: 0.01
+  adam_beta2: 0.98
   amsgrad: true
 loss:
   type: SmoothL1Loss
@@ -32,21 +34,22 @@ lr_scheduler:
   gamma: 0.1
   is_schedule: false
 trainer:
-  epochs: 1
+  epochs: 7
   output_dir: saved/models/
   logging_dir: "./logs"
   logging_steps: 100
   save_total_limit: 5
   save_steps: 500
   save_freq: 1
-  monitor: max val_pearson
+  monitor: max val_micro_f1_score
   early_stop: 3
   evaluation_strategy: steps
   evaluation_steps: 500
   model_dir: "./best_model"
+  warmup_ratio: 0.2
 wandb:
   entity: salmons
-  project_name: klue-re
+  project_name: klue-re-gt
   sweep_project_name: sweep
   sweep_count: 10
 sweep_config:
