--- a/config.yaml
+++ b/config.yaml
@@ -1,30 +1,30 @@
 ---
 run_name: exp-name
 n_gpu: 1
-seed: 420
-use_wandb: false
+seed: 42
+use_wandb: true
 num_labels: 30
 model:
   name: klue/roberta-large
-  variant: REBaseModel
+  variant: BiLSTMREModel
 dataloader:
   type: REDataModule
-  input_format: entity_mask
-  prompt: s_sep_o
-  batch_size: 32
-  max_seq_len: 256
+  input_format: typed_entity_marker_punct
+  prompt: s_and_o
+  type_transform: false
   train_split: train
   valid_split: validation
+  batch_size: 64
   shuffle: true
   revision: a6a27f7e03c79cee2ee1171b7001d7a23cfd4495
   num_workers: 0
 optimizer:
   type: AdamW
-  lr: 2.e-5
+  lr: 2.0e-5
   weight_decay: 0.01
   adam_beta2: 0.98
 loss:
-  type: FocalLoss
+  type: CrossEntropyLoss
   focal_alpha: 0.25
   focal_gamma: 2.0
   dice_smooth: 1.5
@@ -46,6 +46,7 @@ trainer:
   save_total_limit: 5
   save_steps: 500
   save_freq: 1
+  use_early_stop: true
   early_stop: 3
   evaluation_strategy: steps
   evaluation_steps: 500
@@ -58,7 +59,7 @@ wandb:
 sweep_config:
   method: bayes
   metric:
-    name: micro f1 score
+    name: eval/micro f1 score
     goal: maximize
   parameters:
     input_format:
