--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-pandas==1.1.5
-scikit-learn~=0.24.1
-transformers==4.10.0
 datasets==2.12.0
+pandas==1.1.5
+pytz==2023.3
+scikit-learn~=0.24.1
+torch==2.0.1
+torchvision==0.15.2
 tqdm==4.62.1
-torch==2.0.0
-torchvision==0.8.2
+transformers==4.10.0
 wandb==0.15.1
